Mon Oct  5 20:02:42 UTC 2009 / Arnaud Quette <arnaud.quette@free.fr>

 - drivers/nut_usb.c: remove the calls to usb_set_configuration() and
   usb_set_altinterface(), which were not needed and caused troubles
   with some Eaton / Powerware models. Also add some older HP T500 / T750 which
   seem to be supported,
 - data/driver.list: add entries for the above.

Mon Sep 21 08:30:18 UTC 2009 / Arjen de Korte <arjen@de-korte.org>

 - drivers/tripplite-hid.c: add ECO550UPS to list of supported devices.
 - data/driver.list: add an entry for the above.

Sun Sep 20 19:06:34 UTC 2009 / Arjen de Korte <arjen@de-korte.org>

 - drivers/tripplite-hid.c: fix broken matcher function that would
   unconditionally reject possibly supported devices, even when the
   productid option was supplied.

Tue Sep 15 09:06:32 UTC 2009 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - data/driver.list: add an entry for Eaton E Series DX UPS (1-20 kVA) with
   mge-utalk.

Tue Sep 15 08:16:32 UTC 2009 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - data/driver.list: add an entry for Eaton E Series NV UPS (400-2000 VA) with
   megatec_usb (reported by Vitor Choi Feitosa).

Tue Sep  8 18:57:51 UTC 2009 / Arjen de Korte <arjen@de-korte.org>

 - m4/nut_check_libnetsnmp.m4: check for presence of header files to see
   if development files are installed

Tue Sep  8 09:39:24 UTC 2009 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - drivers/ivtscd.c: complete general information (device.{mfr,model,type}),
 - man/ivtscd.8, man/Makefile.am: add the manpage for ivtscd driver,
 - data/driver.list: add an entry for IVT SCD-series devices.

Fri Sep  4 08:36:21 UTC 2009 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - scripts/perl/Nut.pm: embed the NUT Perl client module,
   (patch from Gabor Kiss)
 - COPYING, scripts/README: update information for Perl module inclusion.

Fri Sep  4 08:12:52 UTC 2009 / Arnaud Quette <arnaud.quette@free.fr>

 - drivers/apc-hid.c: fix input.transfer.reason support by using the standard